Added worker threads inference. Not seeing any advantage at this stage (and can in fact run quite a bit slower).

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,6 @@
-*R7
+*R8
+R7
+- Added experimental worker threads (currently worse perf)
 R6
 - Backend rewrite to remove dependencies on .xdsl format for BN representation and display
 - Extremely experimental .xdsl saving (basic networks only)
