--- a/changelog.txt
+++ b/changelog.txt
@@ -42,7 +42,7 @@ R18
 - Probability of Evidence (simple, slow version)
 - Added support for the same function-form logical operators as GeNIe (And, Or, etc.). No "Not", because there's none in GeNIe.
 - Support for further functions (arithmetic)
-R19**
+R19
 - Initial group support
 	- Show only nodes from currently focused group
 	- Show node for submodel, with arcs
@@ -52,8 +52,23 @@ R19**
 	- Fixed up pathsIn/pathsOut to store information as objects rather than arrays
 	- Delete now working again
 - Context menus supported (minimally) on utility and decision nodes now
+R20**
+- Can (properly) flatten a network with submodels (but this is a non-reversible change, rather than a different view)
+- Can move nodes from one submodel to another, by changing it's 'path'
+- Made 'type' visible on context menu (need to make changeable ... somehow)
+- Added 'label' to the context menu
+- Made context menus available on submodels
+- Possible to change ID and label on submodel nodes
+- Code: .submodelPath vs .path (the latter includes id of the submodel itself). Eliminated .path
+- Can view submodel path, and move submodels to different submodels from context menu
+- Show arc strengths fixed, and can be used with BNs containing submodels (I'm not clear that the approach I've chosen is sensible, though, which is sum(mi)/sum(child-entropies) for all applicable paths)
+- FIXED: Significant contextmenu dialog duplication. PART FIXED: Now fix node context menu
+- FIXED: Continuous nodes/networks seem to have broken.
+- FIXED: .dne support broken
 
 Bugs
+- Submodel issues:
+	- 'item' refers to node and submodel items. Should I move to more generic 'node' for both? Without affecting inference...
 - Move the visible graph creation logic out of the display() function
 - Allow switch to flat view and back (how to handle layouts for both group and flat view?)
 - Add node: cpt verification, node types
