Function table editing, new example BN (for deterministic table nodes), more API examples, improvements to node type switching.

--- a/changelog.txt
+++ b/changelog.txt
@@ -80,10 +80,20 @@ R22
 - Allow textboxes to be moved (initial)
 - API: Fair bit of work to get something working in node.js. Requires 'npm install cheerio'.
 - API: Created apiTest.js for API examples/testing. Run as 'node apiTest.js'.
-
+R23
+- Add editing for function tables (deterministic/discrete and utility nodes)
+	- Add drop-down for function tables, rather than state number
+- Added Network -> Clear Evidence to clear all evidence
+- Handle node type changes
+	- Can switch between nature and decision (need to update GUI dialog)
+	- Allow switching between nature/decision and utility
+	- Handle dangling utility children
+	- Test switching between all 3
+- Added deterministic example BN (Logical Gates.xdsl)
 
 Bugs
 - CREATE A PRE-RELEASE CHECKLIST
+- Use hybrid jQuery interface object.setXXX() (returning this) and object.XXX for gets
 - Develop an approach to selecting/editing...
 - Submodel issues:
 	- 'item' refers to node and submodel items. Should I move to more generic 'node' for both? Without affecting inference...
@@ -92,9 +102,12 @@ Bugs
 	- Rename node and state names (content editable? done in context menu)
 	- Add and delete states (API only atm)
 - addStates/deleteStates: Update child CPTs (if they have CPTs)
+- add/remove parents/children: Need to update CPTs, etc.
 - Move the visible graph creation logic out of the display() function
 - Allow switch to flat view and back (how to handle layouts for both group and flat view?)
-- Handle node type changes**
+- Handle node type changes
+	- Add 'Nature - Chance' and 'Nature - Deterministic' (or otherwise handle deterministic in some way)
+**		- Reorganise CPT/Func Table/etc. tabs into 'Definition', with changeable types
 - Create proper compile function (start with loadPostprocess). Should probably 'fix' representational errors.
 - Style comment in node context dialog
 
